# postal_code_api

./: .gitignore
cdk/: package-lock.json  package.json
cdk/lib/: cdk-stack.ts
get-postal-code/: Cargo.toml
get-postal-code/src/: main.rs
update-postal-code/: Cargo.toml
update-postal-code/src/: ken_all.rs  main.rs  postal_code_record.rs
